added link type to dnr node

--- a/dnr/dist-wire.html
+++ b/dnr/dist-wire.html
@@ -32,6 +32,7 @@
       category: 'Distributed NR',
       defaults: {
         input: {value: ''},
+        linkType: {value: ''},
         gateway: {type:"dnr-gateway",required:true},
       },
       color:"#d8bfd8",
